compile ui/resources to python files

--- a/data/main.ui
+++ b/data/main.ui
@@ -460,7 +460,7 @@
   </action>
  </widget>
  <resources>
-  <include location="res.qrc"/>
+  <include location="resources.qrc"/>
  </resources>
  <connections>
   <connection>
